<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/colorFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        android:gravity="center_horizontal"
        android:background="@drawable/borde_login"
        android:paddingVertical="@dimen/pad_vertical_login"
        android:paddingHorizontal="@dimen/pad_horiz_login">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:textColor="@color/textPrimary1"
            android:textSize="@dimen/title_size"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="35sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rut"
                android:textSize="@dimen/subtitle_size"
                android:textColor="@color/textPrimary1"
                android:layout_weight="1.5"
                android:gravity="center"></TextView>
            <EditText
                android:id="@+id/input_login_rut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:background="@color/textPrimary2"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrasena_login"
                android:textSize="20sp"
                android:textColor="@color/textPrimary1"
                android:layout_weight="1.5"
                android:textAlignment="center"></TextView>
            <EditText
                android:id="@+id/input_login_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:background="@color/textPrimary2"></EditText>
        </LinearLayout>
        <Button
            android:id="@+id/boton_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/iniciar_sesion_btn"
            android:textColor="@color/textPrimary1"
            android:background="@color/colorFondo"
            android:paddingHorizontal="10dp"></Button>
    </LinearLayout>

</LinearLayout>