<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarPacienteActivity"
    android:orientation="vertical"
    android:background="@color/colorFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar"></include>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_login"
            android:padding="@dimen/pad_vertical_login"
            android:layout_marginVertical="@dimen/pad_vertical_login"
            android:layout_marginHorizontal="@dimen/pad_vertical_login"
            android:isScrollContainer="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/title_size"
                android:textColor="@color/textPrimary1"
                android:text="Formulario de registro"
                android:textAlignment="center">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rut_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_rut"
                    android:layout_weight="1"
                    android:background="@color/textPrimary2"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_nombre"
                    android:layout_weight="1"
                    android:background="@color/textPrimary2"
                    android:inputType="text"></EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_apellido"
                    android:layout_weight="1"
                    android:background="@color/textPrimary2"
                    android:inputType="text"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_fecha"
                    android:layout_weight="1"
                    android:background="@color/textPrimary2"
                    android:inputType="date"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_area"
                    android:layout_weight="1"
                    android:background="@color/textPrimary2"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sintomas_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1">
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:id="@+id/registro_sintomas"></Switch>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatura_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_temperatura"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:background="@color/textPrimary2"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tos_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1">
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:id="@+id/registro_tos"></Switch>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/pad_horiz_login"
                android:paddingVertical="@dimen/pad_vertical_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presion_registro"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/textPrimary1"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registro_presion"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@color/textPrimary2"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/boton_registrar"
                    android:background="@color/colorFondo"
                    android:text="@string/registrar_boton"
                    ></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>